# meawm-ng

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  errlog
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in  Meawm_NG.session  meawm_ng.desktop  meawm_ng.dtd.in  meawm_ngrc.in  post-action.conf.in  post-style.conf.in  pre-action.conf.in  pre-style.conf.in  startmeawm_ng  xinitrc.meawm_ng
data/actions/: Makefile.am  Makefile.in  button-mappings.conf.in  common.conf.in  key-bindings.conf.in
data/actions/clicktofocusnonopaque/: Makefile.am  Makefile.in  action.conf.in
data/actions/clicktofocusopaque/: Makefile.am  Makefile.in  action.conf.in
data/actions/sloppyfocusnonopaque/: Makefile.am  Makefile.in  action.conf.in
data/actions/sloppyfocusopaque/: Makefile.am  Makefile.in  action.conf.in
data/menus/: Makefile.am  Makefile.in  menu.conf.in
data/menus/icons/: Makefile.am  Makefile.in
data/scripts/: Makefile.am  Makefile.in  actioncfgmenu.pl.in  file2textop.pl.in  stylecfgmenu.pl.in
data/scripts/icons/: Makefile.am  Makefile.in
data/styles/: Makefile.am  Makefile.in  logo.conf.in
data/styles/freedesktop/: Makefile.am  Makefile.in  dockapp.conf.in  menu.conf.in  root.conf.in  style.conf.in  window.conf.in
debian/: changelog  control  copyright  dirs  meawm_ng-config  meawm_ng.menu-method  meawm_ng.postinst  meawm_ng.postrm  meawm_ng.sample-gdm-session  menu  rules
doc/: Makefile.am  Makefile.in  meawm_ng.1.in
src/: Action.cc  Action.hh  Cursor.cc  Cursor.hh  Dockapp.cc  Dockapp.hh  Event.cc  Event.hh  Makefile.am  Makefile.in  Meawm_NG.cc  Meawm_NG.hh  Menu.cc  Menu.hh  Net.cc  Net.hh  Parser.cc  Parser.hh  Png.cc  Png.hh  RefCounted.hh  Regex.cc  Regex.hh  Render.cc  Render.hh  Resources.cc  Resources.hh  Screen.cc  Screen.hh  Style.cc  Style.hh  Timer.cc  Timer.hh  Tst.hh  Util.cc  Util.hh  Window.cc  Window.hh  main.cc
util/: Makefile.am  Makefile.in  meawm_ngctl.c
