iconsdir = $(pkgdatadir)/menus/icons
icons_DATA = \
	actions.png \
	desktops.png \
	editors.png \
	emacs.png \
	evolution.png \
	exit.png \
	galeon.png \
	gimp.png \
	graphics.png \
	gvim.png \
	info.png \
	lock.png \
	mozilla.png \
	multimedia.png \
	network.png \
	restart.png \
	rootmenu.png \
	settings.png \
	styles.png \
	window-list.png \
	window.png \
	xmms.png \
	xterm.png

EXTRA_DIST = $(icons_DATA)
